Deploy Gnocchi as a Ceilometer metrics storage backend
* Deploy Gnocchi API.
* Storage backends: swift, rbd and file.
* Indexer backend default to mysql
* Configure Ceilometer to send metrics datas to Gnocchi
* Pacemaker config

Depends-On: Ic8778a3104e0ed0460423e4bf857682220dc5802
Depends-On: I7d2eb9405e0171fc54fa0b616122f69db5f51ce2

Co-Authored-By: Pradeep Kilambi <pkilambi@redhat.com>

Change-Id: Ifde17b1ab8fa2b30544633e455e1c7eb475705aa

--- a/environments/puppet-ceph-devel.yaml
+++ b/environments/puppet-ceph-devel.yaml
@@ -1,6 +1,6 @@
 # A Heat environment file which can be used to enable a Ceph
 # storage cluster using the controller and ceph nodes.
-# Rbd backends are enabled for Cinder, Glance, and Nova.
+# Rbd backends are enabled for Cinder, Glance, Gnocchi and Nova.
 parameters:
   #NOTE: These ID's and keys should be regenerated for
   # a production deployment. What is here is suitable for
@@ -11,5 +11,6 @@ parameters:
   NovaEnableRbdBackend: true
   CinderEnableRbdBackend: true
   GlanceBackend: rbd
+  GnocchiBackend: rbd
   CinderEnableIscsiBackend: false
   ControllerEnableCephStorage: true
