--- a/environments/puppet-ceph-external.yaml
+++ b/environments/puppet-ceph-external.yaml
@@ -9,16 +9,18 @@ parameter_defaults:
   #CephClientKey: 'AQDLOh1VgEp6FRAAFzT7Zw+Y9V6JJExQAsRnRQ=='
   #CephExternalMonHost: '172.16.1.7, 172.16.1.8'
 
-  # the following parameters enable Ceph backends for Cinder, Glance, and Nova
+  # the following parameters enable Ceph backends for Cinder, Glance, Gnocchi and Nova
   NovaEnableRbdBackend: true
   CinderEnableRbdBackend: true
   GlanceBackend: rbd
+  GnocchiBackend: rbd
   # If the Ceph pools which host VMs, Volumes and Images do not match these
   # names OR the client keyring to use is not named 'openstack',  edit the
   # following as needed.
   NovaRbdPoolName: vms
   CinderRbdPoolName: volumes
   GlanceRbdPoolName: images
+  GnocchiRbdPoolName: metrics
   CephClientUserName: openstack
 
   # finally we disable the Cinder LVM backend
