--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -19,6 +19,15 @@ Ceilometer:
         vip_param: CeilometerApi
     port: 8777
 
+Gnocchi:
+    Internal:
+        vip_param: GnocchiApi
+    Public:
+        vip_param: Public
+    Admin:
+        vip_param: GnocchiApi
+    port: 8041
+
 Cinder:
     Internal:
         vip_param: CinderApi
