--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -8,6 +8,9 @@ ceilometer::agent::auth::auth_tenant_name: 'service'
 aodh::auth::auth_region: 'regionOne'
 aodh::auth::auth_tenant_name: 'service'
 
+gnocchi::auth::auth_region: 'regionOne'
+gnocchi::auth::auth_tenant_name: 'service'
+
 nova::api::admin_tenant_name: 'service'
 nova::network::neutron::neutron_project_name: 'service'
 nova::network::neutron::neutron_username: 'neutron'
