--- a/environments/enable-tls.yaml
+++ b/environments/enable-tls.yaml
@@ -17,6 +17,9 @@ parameter_defaults:
     GlanceAdmin: {protocol: 'http', port: '9292', host: 'IP_ADDRESS'}
     GlanceInternal: {protocol: 'http', port: '9292', host: 'IP_ADDRESS'}
     GlancePublic: {protocol: 'https', port: '13292', host: 'CLOUDNAME'}
+    GnocchiAdmin: {protocol: 'http', port: '8041', host: 'IP_ADDRESS'}
+    GnocchiInternal: {protocol: 'http', port: '8041', host: 'IP_ADDRESS'}
+    GnocchiPublic: {protocol: 'https', port: '13041', host: 'CLOUDNAME'}
     HeatAdmin: {protocol: 'http', port: '8004', host: 'IP_ADDRESS'}
     HeatInternal: {protocol: 'http', port: '8004', host: 'IP_ADDRESS'}
     HeatPublic: {protocol: 'https', port: '13004', host: 'CLOUDNAME'}
