--- a/environments/storage-environment.yaml
+++ b/environments/storage-environment.yaml
@@ -15,6 +15,8 @@ parameter_defaults:
   NovaEnableRbdBackend: true
   ## Glance backend can be either 'rbd' (Ceph), 'swift' or 'file'.
   GlanceBackend: rbd
+  ## Gnocchi backend can be either 'rbd' (Ceph), 'swift' or 'file'.
+  GnocchiBackend: rbd
 
 
   #### CINDER NFS SETTINGS ####
