--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -44,6 +44,8 @@ parameters:
     type: comma_delimited_list
   glance_registry_node_ips:
     type: comma_delimited_list
+  gnocchi_api_node_ips:
+    type: comma_delimited_list
   cinder_api_node_ips:
     type: comma_delimited_list
   neutron_api_node_ips:
@@ -197,6 +199,14 @@ resources:
                         list_join:
                         - "','"
                         - {get_param: aodh_api_node_ips}
+                gnocchi_api_node_ips:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: gnocchi_api_node_ips}
                 nova_api_node_ips:
                   str_replace:
                     template: "['SERVERS_LIST']"
