--- a/puppet/extraconfig/ceph/ceph-external-config.yaml
+++ b/puppet/extraconfig/ceph/ceph-external-config.yaml
@@ -38,6 +38,9 @@ parameters:
   GlanceRbdPoolName:
     default: images
     type: string
+  GnocchiRbdPoolName:
+    default: metrics
+    type: string
   CephClientUserName:
     default: openstack
     type: string
@@ -68,7 +71,7 @@ resources:
                         secret: 'CLIENT_KEY',
                         mode: '0644',
                         cap_mon: 'allow r',
-                        cap_osd: 'allow class-read object_prefix rbd_children, allow rwx pool=CINDER_POOL, allow rwx pool=NOVA_POOL, allow rwx pool=GLANCE_POOL'
+                        cap_osd: 'allow class-read object_prefix rbd_children, allow rwx pool=CINDER_POOL, allow rwx pool=NOVA_POOL, allow rwx pool=GLANCE_POOL, allow rwx pool=GNOCCHI_POOL'
                       }
                     }"
                     params:
@@ -77,13 +80,21 @@ resources:
                       NOVA_POOL: {get_param: NovaRbdPoolName}
                       CINDER_POOL: {get_param: CinderRbdPoolName}
                       GLANCE_POOL: {get_param: GlanceRbdPoolName}
+                      GNOCCHI_POOL: {get_param: GnocchiRbdPoolName}
                 ceph::profile::params::ms_bind_ipv6: {get_param: CephIPv6}
                 nova::compute::rbd::libvirt_images_rbd_pool: {get_param: NovaRbdPoolName}
                 cinder_rbd_pool_name: {get_param: CinderRbdPoolName}
                 glance::backend::rbd::rbd_store_pool: {get_param: GlanceRbdPoolName}
+                gnocchi::storage::ceph::ceph_pool: {get_param: GnocchiRbdPoolName}
+                gnocchi::storage::ceph::ceph_username: {get_param: CephClientUserName}
                 nova::compute::rbd::libvirt_rbd_user: {get_param: CephClientUserName}
                 glance::backend::rbd::rbd_store_user: {get_param: CephClientUserName}
                 nova::compute::rbd::rbd_keyring:
+                  list_join:
+                  - '.'
+                  - - 'client'
+                    - {get_param: CephClientUserName}
+                gnocchi::storage::ceph::ceph_keyring:
                   list_join:
                   - '.'
                   - - 'client'
@@ -93,6 +104,7 @@ resources:
                   - {get_param: CinderRbdPoolName}
                   - {get_param: NovaRbdPoolName}
                   - {get_param: GlanceRbdPoolName}
+                  - {get_param: GnocchiRbdPoolName}
 
 outputs:
   config_id:
