--- a/puppet/vip-config.yaml
+++ b/puppet/vip-config.yaml
@@ -27,6 +27,7 @@ resources:
                 nova_metadata_vip: {get_input: nova_metadata_vip}
                 ceilometer_api_vip: {get_input: ceilometer_api_vip}
                 aodh_api_vip: {get_input: aodh_api_vip}
+                gnocchi_api_vip: {get_input: gnocchi_api_vip}
                 heat_api_vip: {get_input: heat_api_vip}
                 horizon_vip: {get_input: horizon_vip}
                 redis_vip: {get_input: redis_vip}
