--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -6,6 +6,16 @@ nova::consoleauth::enabled: true
 nova::vncproxy::enabled: true
 nova::scheduler::enabled: true
 
+# gnocchi
+gnocchi::db::sync::extra_opts: '--skip-storage'
+gnocchi::storage::swift::swift_user: 'service:gnocchi'
+gnocchi::storage::swift::swift_auth_version: 2
+gnocchi::statsd::resource_id: '0a8b55df-f90f-491c-8cb9-7cdecec6fc26'
+gnocchi::statsd::user_id: '27c0d3f8-e7ee-42f0-8317-72237d1c5ae3'
+gnocchi::statsd::project_id: '6c38cd8d-099a-4cb2-aecf-17be688e8616'
+gnocchi::statsd::flush_delay: 10
+gnocchi::statsd::archive_policy_name: 'low'
+
 # rabbitmq
 rabbitmq::delete_guest_user: false
 rabbitmq::wipe_db_on_cookie_change: true
@@ -44,6 +54,7 @@ neutron::agents::dhcp::dhcp_delete_namespaces: True
 cinder::api::keystone_tenant: 'service'
 swift::proxy::authtoken::admin_tenant_name: 'service'
 ceilometer::api::keystone_tenant: 'service'
+gnocchi::api::keystone_tenant: 'service'
 heat::keystone_tenant: 'service'
 sahara::admin_tenant_name: 'service'
 
@@ -150,6 +161,7 @@ tripleo::loadbalancer::sahara: true
 tripleo::loadbalancer::swift_proxy_server: true
 tripleo::loadbalancer::ceilometer: true
 tripleo::loadbalancer::aodh: true
+tripleo::loadbalancer::gnocchi: true
 tripleo::loadbalancer::heat_api: true
 tripleo::loadbalancer::heat_cloudwatch: true
 tripleo::loadbalancer::heat_cfn: true
@@ -266,3 +278,7 @@ tripleo::firewall::firewall_rules:
     port:
       - 8042
       - 13042
+  '129 gnocchi-api':
+    port:
+      - 8041
+      - 13041
