Change /etc/hosts format and add domain
Right now, the service-related IPs assosiated with the machine are
registered in the /etc/hosts with different hostnames. This is fine,
except if you need to register that hostname in a third party service
(such as FreeIPA), since the current configuration is not assigning a
domain to those IP addresses. So the current implementation requires
DNS to be properly working, which is not ideal for testing purposes.

Since the current hostnames are not currently being used; it's still
trivial to change this mapping and the format of them. instead of
having entries such as:

    <INTERNAL IP>  <node>-internalapi
    <STORAGE IP>   <node>-storage
    ...

in /etc/hosts; This changes the format to:

    <INTERNAL IP>  <node>.internalapi.<domain>  <node>.internalapi
    <STORAGE IP>   <node>.storage.<domain>  <node>.storage
    ...

So the network (external, internal, storage, etc...) is now
represented as a subdomain. For simplicity, the format without the
domain is still available through an alias.

Change-Id: I6502959a974546e5de757935acea15df6326acda

--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -379,12 +379,12 @@ outputs:
       str_replace:
         template: |
           PRIMARYIP PRIMARYHOST.DOMAIN PRIMARYHOST
-          EXTERNALIP EXTERNALHOST
-          INTERNAL_APIIP INTERNAL_APIHOST
-          STORAGEIP STORAGEHOST
-          STORAGE_MGMTIP STORAGE_MGMTHOST
-          TENANTIP TENANTHOST
-          MANAGEMENTIP MANAGEMENTHOST
+          EXTERNALIP EXTERNALHOST.DOMAIN EXTERNALHOST
+          INTERNAL_APIIP INTERNAL_APIHOST.DOMAIN INTERNAL_APIHOST
+          STORAGEIP STORAGEHOST.DOMAIN STORAGEHOST
+          STORAGE_MGMTIP STORAGE_MGMTHOST.DOMAIN STORAGE_MGMTHOST
+          TENANTIP TENANTHOST.DOMAIN TENANTHOST
+          MANAGEMENTIP MANAGEMENTHOST.DOMAIN MANAGEMENTHOST
         params:
           PRIMARYIP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, BlockStorageHostnameResolveNetwork]}]}
           DOMAIN: {get_param: CloudDomain}
@@ -392,37 +392,37 @@ outputs:
           EXTERNALIP: {get_attr: [ExternalPort, ip_address]}
           EXTERNALHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [BlockStorage, name]}
               - external
           INTERNAL_APIIP: {get_attr: [InternalApiPort, ip_address]}
           INTERNAL_APIHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [BlockStorage, name]}
               - internalapi
           STORAGEIP: {get_attr: [StoragePort, ip_address]}
           STORAGEHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [BlockStorage, name]}
               - storage
           STORAGE_MGMTIP: {get_attr: [StorageMgmtPort, ip_address]}
           STORAGE_MGMTHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [BlockStorage, name]}
               - storagemgmt
           TENANTIP: {get_attr: [TenantPort, ip_address]}
           TENANTHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [BlockStorage, name]}
               - tenant
           MANAGEMENTIP: {get_attr: [ManagementPort, ip_address]}
           MANAGEMENTHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [BlockStorage, name]}
               - management
   nova_server_resource:
