--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -337,12 +337,12 @@ outputs:
       str_replace:
         template: |
           PRIMARYIP PRIMARYHOST.DOMAIN PRIMARYHOST
-          EXTERNALIP EXTERNALHOST
-          INTERNAL_APIIP INTERNAL_APIHOST
-          STORAGEIP STORAGEHOST
-          STORAGE_MGMTIP STORAGE_MGMTHOST
-          TENANTIP TENANTHOST
-          MANAGEMENTIP MANAGEMENTHOST
+          EXTERNALIP EXTERNALHOST.DOMAIN EXTERNALHOST
+          INTERNAL_APIIP INTERNAL_APIHOST.DOMAIN INTERNAL_APIHOST
+          STORAGEIP STORAGEHOST.DOMAIN STORAGEHOST
+          STORAGE_MGMTIP STORAGE_MGMTHOST.DOMAIN STORAGE_MGMTHOST
+          TENANTIP TENANTHOST.DOMAIN TENANTHOST
+          MANAGEMENTIP MANAGEMENTHOST.DOMAIN MANAGEMENTHOST
         params:
           PRIMARYIP: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, ObjectStorageHostnameResolveNetwork]}]}
           DOMAIN: {get_param: CloudDomain}
@@ -350,37 +350,37 @@ outputs:
           EXTERNALIP: {get_attr: [ExternalPort, ip_address]}
           EXTERNALHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [SwiftStorage, name]}
               - external
           INTERNAL_APIIP: {get_attr: [InternalApiPort, ip_address]}
           INTERNAL_APIHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [SwiftStorage, name]}
               - internalapi
           STORAGEIP: {get_attr: [StoragePort, ip_address]}
           STORAGEHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [SwiftStorage, name]}
               - storage
           STORAGE_MGMTIP: {get_attr: [StorageMgmtPort, ip_address]}
           STORAGE_MGMTHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [SwiftStorage, name]}
               - storagemgmt
           TENANTIP: {get_attr: [TenantPort, ip_address]}
           TENANTHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [SwiftStorage, name]}
               - tenant
           MANAGEMENTIP: {get_attr: [ManagementPort, ip_address]}
           MANAGEMENTHOST:
             list_join:
-            - '-'
+            - '.'
             - - {get_attr: [SwiftStorage, name]}
               - management
   nova_server_resource:
