--- a/puppet/controller-config-pacemaker.yaml
+++ b/puppet/controller-config-pacemaker.yaml
@@ -8,6 +8,10 @@ parameters:
     default: false
     description: Whether to run config management (e.g. Puppet) in debug mode.
     type: boolean
+  StepConfig:
+     type: string
+     description: Config manifests that will be used to step through the deployment.
+     default: ''
 
 resources:
 
@@ -26,6 +30,7 @@ resources:
         - ''
         - - get_file: manifests/overcloud_controller_pacemaker.pp
           - get_file: manifests/ringbuilder.pp
+          - {get_param: StepConfig}
 
 outputs:
   OS::stack_id:
