--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -790,6 +790,9 @@ parameters:
     type: json
     description: Optional scheduler hints to pass to nova
     default: {}
+  ServiceConfigSettings:
+    type: json
+    default: {}
 
 resources:
 
@@ -1294,6 +1297,7 @@ resources:
             - heat_config_%{::deploy_config_name}
             - controller_extraconfig
             - extraconfig
+            - service_configs
             - controller
             - database
             - object
@@ -1316,6 +1320,8 @@ resources:
             - neutron_opencontrail_data # Optionally provided by ControllerExtraConfigPre
             - neutron_plumgrid_data # Optionally provided by ControllerExtraConfigPre
           datafiles:
+            service_configs:
+              mapped_data: {get_param: ServiceConfigSettings}
             controller_extraconfig:
               mapped_data: {get_param: ControllerExtraConfig}
             extraconfig:
