--- a/environments/external-loadbalancer-vip.yaml
+++ b/environments/external-loadbalancer-vip.yaml
@@ -10,7 +10,8 @@ resource_registry:
   OS::TripleO::Controller::Ports::StoragePort: ../network/ports/storage_from_pool.yaml
   OS::TripleO::Controller::Ports::StorageMgmtPort: ../network/ports/storage_mgmt_from_pool.yaml
   OS::TripleO::Controller::Ports::TenantPort: ../network/ports/tenant_from_pool.yaml
-  OS::TripleO::Controller::Ports::ManagementPort: ../network/ports/management_from_pool.yaml
+  # Management network is optional and disabled by default
+  #OS::TripleO::Controller::Ports::ManagementPort: ../network/ports/management_from_pool.yaml
 
 parameter_defaults:
   # When using an external loadbalancer set the following in parameter_defaults
@@ -35,6 +36,6 @@ parameter_defaults:
     - 172.16.3.253
     tenant:
     - 172.16.0.253
-    management:
-    - 172.16.4.253
+    #management:
+    #- 172.16.4.253
   EnableLoadBalancer: false
