--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -123,6 +123,7 @@ resource_registry:
 
   # services
   OS::TripleO::Services: puppet/services/services.yaml
+  OS::TripleO::Services::Keystone: puppet/services/keystone.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
