--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1163,10 +1163,11 @@ resources:
         ceilometer_coordination_url:
           list_join:
             - ''
-            - - 'redis://'
-              - {get_param: RedisVirtualIPUri}
-              - ':6379/?password='
+            - - 'redis://:'
               - {get_param: RedisPassword}
+              - '@'
+              - {get_param: RedisVirtualIPUri}
+              - ':6379/'
         ceilometer_dsn:
           list_join:
             - ''
