Wire redis_password to the tripleo module
Without this the HAProxy monitoring for Redis would fail to poll
the backends.

Change-Id: Id0826c6b04e471844c7bef69480af263cf2b3bd4

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1649,6 +1649,7 @@ resources:
                 tripleo::loadbalancer::service_certificate: {get_attr: [NodeTLSData, deployed_ssl_certificate_path]}
                 tripleo::loadbalancer::haproxy_stats_user: {get_input: haproxy_stats_user}
                 tripleo::loadbalancer::haproxy_stats_password: {get_input: haproxy_stats_password}
+                tripleo::loadbalancer::redis_password: {get_input: redis_password}
                 tripleo::packages::enable_install: {get_input: enable_package_install}
                 tripleo::packages::enable_upgrade: {get_input: enable_package_upgrade}
 
